--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "my-dev-tips",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "My personal findings and tips",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Sean Fairchild <seanf215@gmail.com>",
   "dependencies": {
     "gatsby": "^2.2.5",
     "gatsby-image": "^2.0.34",
